[Fix] labels alignment

--- a/src/client/components/account/style.css
+++ b/src/client/components/account/style.css
@@ -29,3 +29,7 @@
 .alert{
     background-color: #d5a353;
 }
+
+.w-20{
+    width: 19%;
+}
